<resources>
    <string name="app_name">MovieApp</string>
    <string name="popular">Popular</string>
    <string name="all">ALL</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="nowplaying">Now Playing</string>
    <string name="discover">Discover Movies</string>

    <string name="length">Length</string>
    <string name="language">Language</string>
    <string name="count">Count</string>
    <string name="vote">Vote</string>
    <string name="overview">Overview</string>

    <string name="popularity">Popularity</string>
    <string name="released">Released</string>
    <string name="production">Productions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
</resources>
