<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>



        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroolview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/midnightExpress">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/search"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:endIconDrawable="@drawable/ic_baseline_search_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/divider4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/discover">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchTextField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="24sp">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/nowPlayingAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/all"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nowplaying" />

                <TextView
                    android:id="@+id/nowplaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nowplaying"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider4" />

                <TextView
                    android:id="@+id/popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/popular"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <TextView
                    android:id="@+id/upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/upcoming"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <TextView
                    android:id="@+id/upComingAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/all"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/upcoming"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/upcoming" />

                <TextView
                    android:id="@+id/popularAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/all"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/popular" />

                <include
                    android:id="@+id/popularInclude"
                    layout="@layout/popular_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular" />

                <include
                    android:id="@+id/upcomingInclude"
                    layout="@layout/upcoming_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming" />


                <include
                    android:id="@+id/nowplayingInclude"
                    layout="@layout/nowplaying_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nowplaying" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/design_default_color_surface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nowplayingInclude" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/design_default_color_on_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upcomingInclude" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

                <TextView
                    android:id="@+id/discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/discover"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>







</layout>