<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.example.movieapp.model.Result" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            app:strokeWidth="2dp"
            app:strokeColor="#000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1A1B37">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:posterPath="@{movie.posterPath}"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/popularityRes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{movie.popularity.toString()}"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/popularity" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{movie.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{movie.voteCount.toString()}"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="@+id/popularityRes"
                    app:layout_constraintStart_toStartOf="@+id/popularityRes"
                    app:layout_constraintTop_toBottomOf="@+id/vote" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{movie.releaseDate.toString()}"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/releasedate" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/popularity"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/vote"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/popularityRes"
                    app:layout_constraintTop_toBottomOf="@+id/popularityRes" />

                <TextView
                    android:id="@+id/releasedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/released"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>